feat(discover+page): added - pages layout, with transition support (not working perfectly but available); - device media queries, - discover page that just shows all the stored collections - a link to go with page transitions, - app bar and bottom bar  for mobile screens,

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -186,6 +186,9 @@
 
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  --breakpoint-xs: 480px;
+
 }
 
 @layer base {
@@ -210,7 +213,7 @@
   }
 
   .container {
-    @apply px-2 lg:px-0;
+    @apply px-4 md:px-2 lg:px-0
   }
 }
 
