updated the home page and the discover page

--- a/src/app/styles/root.css
+++ b/src/app/styles/root.css
@@ -1,4 +1,4 @@
-@view-transition {
+/*@view-transition {
   navigation: auto;
 }
 
@@ -88,4 +88,4 @@
     transform: translateY(-100%);
     opacity: 0%;
   }
-}
+}*/
